--- a/nifi-extension-bundles/nifi-standard-services/nifi-db-adapter-provider-bundle/nifi-db-adapter-nar/pom.xml
+++ b/nifi-extension-bundles/nifi-standard-services/nifi-db-adapter-provider-bundle/nifi-db-adapter-nar/pom.xml
@@ -20,13 +20,38 @@
         <version>2.0.0-SNAPSHOT</version>
     </parent>
     
-    <artifactId>nifi-oracle-db-adapter-provider-nar</artifactId>
+    <artifactId>nifi-db-adapter-nar</artifactId>
     <packaging>nar</packaging>
 
     <dependencies>
         <dependency>
             <groupId>org.apache.nifi</groupId>
+            <artifactId>nifi-generic-db-adapter-provider</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.nifi</groupId>
+            <artifactId>nifi-mssql-db-adapter-provider</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.nifi</groupId>
+            <artifactId>nifi-mysql-db-adapter-provider</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.nifi</groupId>
             <artifactId>nifi-oracle-db-adapter-provider</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.nifi</groupId>
+            <artifactId>nifi-phoenix-db-adapter-provider</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.nifi</groupId>
+            <artifactId>nifi-postgresql-db-adapter-provider</artifactId>
             <version>2.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
