--- a/nifi-extension-bundles/nifi-standard-services/nifi-db-adapter-provider-bundle/pom.xml
+++ b/nifi-extension-bundles/nifi-standard-services/nifi-db-adapter-provider-bundle/pom.xml
@@ -23,17 +23,12 @@
     <artifactId>nifi-db-adapter-provider-bundle</artifactId>
     <packaging>pom</packaging>
     <modules>
+        <module>nifi-db-adapter-nar</module>
         <module>nifi-generic-db-adapter-provider</module>
-        <module>nifi-generic-db-adapter-provider-nar</module>
         <module>nifi-oracle-db-adapter-provider</module>
-        <module>nifi-oracle-db-adapter-provider-nar</module>
         <module>nifi-mssql-db-adapter-provider</module>
-        <module>nifi-mssql-db-adapter-provider-nar</module>
         <module>nifi-mysql-db-adapter-provider</module>
-        <module>nifi-mysql-db-adapter-provider-nar</module>
         <module>nifi-postgresql-db-adapter-provider</module>
-        <module>nifi-postgresql-db-adapter-provider-nar</module>
         <module>nifi-phoenix-db-adapter-provider</module>
-        <module>nifi-phoenix-db-adapter-provider-nar</module>
     </modules>
 </project>
