--- a/nifi-extension-bundles/nifi-standard-services/nifi-db-adapter-provider-bundle/nifi-db-adapter/pom.xml
+++ b/nifi-extension-bundles/nifi-standard-services/nifi-db-adapter-provider-bundle/nifi-db-adapter/pom.xml
@@ -19,21 +19,50 @@
         <artifactId>nifi-db-adapter-provider-bundle</artifactId>
         <version>2.0.0-SNAPSHOT</version>
     </parent>
-    
-    <artifactId>nifi-db-adapter-nar</artifactId>
-    <packaging>nar</packaging>
+
+    <artifactId>nifi-db-adapter</artifactId>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
             <groupId>org.apache.nifi</groupId>
-            <artifactId>nifi-db-adapter</artifactId>
+            <artifactId>nifi-db-adapter-provider-api</artifactId>
             <version>2.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.apache.nifi</groupId>
-            <artifactId>nifi-standard-services-api-nar</artifactId>
+            <artifactId>nifi-database-adapter-api</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>nar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.nifi</groupId>
+            <artifactId>nifi-generic-database-adapter</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.nifi</groupId>
+            <artifactId>nifi-mssql-database-adapter</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.nifi</groupId>
+            <artifactId>nifi-mysql-database-adapter</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.nifi</groupId>
+            <artifactId>nifi-oracle-database-adapter</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.nifi</groupId>
+            <artifactId>nifi-phoenix-database-adapter</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.nifi</groupId>
+            <artifactId>nifi-postgresql-database-adapter</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
